refactor: ajusta os vários trechos de código apontados pelo Sonar como code smells